--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
             "email": "cnvvc@mail.ru"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "App\\": "classes/"
+        }
+    },
     "require": {}
 }
