set php minimum version

--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,7 @@
             "Democvidev\\ChessTeam\\": "src/"
         }
     },
-    "require": {}
+    "require": {
+        "php": ">=7.3.0"
+    }
 }
